--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,11 @@
 {
   "extends": "airbnb",
   "rules": {
+    "react/prop-types": 0,
     "react/prefer-stateless-function": 0
   },
   "env": {
     "browser": true,
     "node": true
-  },
+  }
 }
