--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "webpack-client-boilerplate",
+  "name": "webpack-universal-boilerplate",
   "version": "0.0.1",
   "private": true,
   "description": "Minimal boilerplate to simplify kick off period of the next project.",
   "main": "webpack.config.client.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.client.js"
+    "start": "rm -rf ./build && webpack --config webpack.config.server.js"
   },
   "engines": {
     "node": ">=8.2.1",
@@ -14,31 +14,44 @@
   "author": "infiman",
   "license": "ISC",
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-hot-loader": "^3.0.0-beta.7"
+    "babel-polyfill": "^6.26.0",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "history": "^4.7.2",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-hot-loader": "^3.1.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-config": "^1.0.0-beta.4",
+    "react-router-redux": "^5.0.0-alpha.8",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.20.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-env": "^1.6.0",
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.3.0",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.9.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.4.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.30.1",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.0.8",
     "postcss-scss": "^1.0.2",
     "precss": "^2.0.0",
+    "start-server-webpack-plugin": "^2.2.0",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.4",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-node-externals": "^1.6.0"
   }
 }
