chaining not working

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "babel-polyfill": "^6.26.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "gsap": "^1.20.3",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-gsap-enhancer": "^0.3.0",
     "react-hot-loader": "^3.1.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
